readme first description

--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,6 @@ picture {
 }
 body {
   font-size: 100%;
-  background-color: black;
-  color: aliceblue;
+  background-color: aliceblue;
+  color: indigo;
 }
