--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ header {
   font-size: 30px;
   text-size-adjust: center;
 }
-
+/*
 .grid {
   width: 500px;
   height: 500px;
@@ -25,6 +25,25 @@ header {
   justify-content: center;
   margin-left: 450px;
   margin-right: 450px;
+}
+*/
+
+.grid {
+  align-items: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  justify-content: center;
+  height: 600px;
+  width: 600px;
+}
+
+.grid div {
+  border: 1px solid lightgrey;
+  flex-grow: 1;
+  height: 10%;
+  width: 10%;
 }
 
 img {
