--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,14 @@ header {
   cursor: pointer;
 }
 
+.grid div.blueshoot {
+  background-image: url(../images/blueshoot.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  cursor: pointer;
+}
+
 img {
   display: block;
   height: 50px;
