a piece more for readme

--- a/styles/main.css
+++ b/styles/main.css
@@ -85,6 +85,6 @@ picture {
 body {
   font-size: 100%;
   background-size: cover;
-  background-image: url(../images/tree-planet-stars-galaxy-art-1140x1140-gENweB0RT.jpeg);
+  background-image: url(../images/galaxy-1837306_1920.jpg);
   color: greenyellow;
 }
